k8s/n8n/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    # AUTHENTICATION HANDSHAKE
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:80/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.sikiru.co.uk/oauth2/start?rd=$scheme://$host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User,X-Auth-Request-Email,Authorization"

    # THE 501 ERROR FIX (Native & Safe)
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 16k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - n8n.sikiru.co.uk
      secretName: n8n-tls3
  rules:
    - host: n8n.sikiru.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
